--- a/package.json
+++ b/package.json
@@ -18,7 +18,15 @@
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
         "resolve-url-loader": "^3.1.0",
-        "sass": "^1.15.2",
-        "sass-loader": "^8.0.0"
+        "sass": "^1.26.3",
+        "sass-loader": "^8.0.2",
+        "vue-template-compiler": "2.6.11"
+    },
+    "dependencies": {
+        "node-sass": "^4.13.1",
+        "pug": "^2.0.4",
+        "pug-loader": "^2.4.0",
+        "vue": "^2.6.11",
+        "vue-loader": "14.2.2"
     }
 }
