--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,9 @@
 {
-    "/js/app.js": "/js/app.js?id=24f14c362436027c4c11",
-    "/css/app.css": "/css/app.css?id=2b758c19811fdf77d488",
-    "/js/manifest.js": "/js/manifest.js?id=41f053ba9a94d81b39f8",
-    "/js/vendor.js": "/js/vendor.js?id=85c585873c0ef74df681"
+    "/js/app.js": "/js/app.js?id=db2554d52f797ea5a07a",
+    "/css/app.css": "/css/app.css?id=94c5d53f1c692cad5f28",
+    "/js/app.js.map": "/js/app.js.map?id=f55b16d890ca56ef55bb",
+    "/js/manifest.js": "/js/manifest.js?id=89712bc6d8c588400cae",
+    "/js/manifest.js.map": "/js/manifest.js.map?id=2d58fed8b8c4a064950d",
+    "/js/vendor.js": "/js/vendor.js?id=5c71a8cd6bd23ac8d0f8",
+    "/js/vendor.js.map": "/js/vendor.js.map?id=7704b97d700a5d60a624"
 }
