--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "eduardokum/laravel-mail-auto-embed": "^1.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
+        "geocoder-php/google-maps-provider": "^4.4",
         "guzzlehttp/guzzle": "^6.3",
         "infyomlabs/adminlte-templates": "7.0.x-dev",
         "infyomlabs/laravel-generator": "7.0.x-dev",
@@ -20,7 +21,8 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "laravelcollective/html": "^6.1",
-        "spatie/laravel-permission": "^3.11"
+        "spatie/laravel-permission": "^3.11",
+        "toin0u/geocoder-laravel": "^4.3"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
@@ -65,6 +67,12 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "post-update-cmd": [
+            "@php artisan cache:clear"
+        ],
+        "post-install-cmd": [
+            "@php artisan cache:clear"
         ]
     }
 }
