--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
         "doctrine/dbal": "~2.3",
         "eduardokum/laravel-mail-auto-embed": "^1.0",
         "fideloper/proxy": "^4.2",
-        "fruitcake/laravel-cors": "^1.0",
-        "geocoder-php/google-maps-provider": "^4.4",
+        "fruitcake/laravel-cors": "^1.0",        
         "guzzlehttp/guzzle": "^6.3",
         "infyomlabs/adminlte-templates": "7.0.x-dev",
         "infyomlabs/laravel-generator": "7.0.x-dev",
@@ -21,8 +20,7 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "laravelcollective/html": "^6.1",
-        "spatie/laravel-permission": "^3.11",
-        "toin0u/geocoder-laravel": "^4.3"
+        "spatie/laravel-permission": "^3.11"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
