--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "opencage/geocode": "^2.1",
         "php-http/guzzle6-adapter": "^2.0",
         "php-http/message": "^1.8",
-        "spatie/laravel-permission": "^3.11"
+        "spatie/laravel-permission": "^3.11",
+        "toin0u/geocoder-laravel": "^4.3"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
